--- a/statistics.html
+++ b/statistics.html
@@ -81,7 +81,7 @@
 <p><span class="badge badge-light">Mechelen,BE Mechelen,BE  Mechelen, Belgium  Mechelen,BE  Mechelen,BE  France Boston</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698606348-co-op-statistical-genetics-genetic-epidemiology-human-target-validation-core-'>Biogen Co-op: Statistical Genetics & Genetic Epidemiology (Human Target Validation Core) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698606348-co-op-statistical-genetics-genetic-epidemiology-human-target-validation-core-'>Biogen Co-op: Statistical Genetics & Genetic Epidemiology (Human Target Validation Core) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -115,7 +115,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=oD7fafwT&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=n4NSmMwm'>Align Technology Careers - Senior Data Scientist/Statistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=oD7fafwT&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=n4NSmMwm'>Align Technology Careers - Senior Data Scientist/Statistician</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -151,7 +151,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Durham, NC</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://foghorntherapeutics.applytojob.com/apply/f8yWkDWk4s/Head-Of-Biostatistics'>Head of Biostatistics - Foghorn Therapeutics - Career Page</a></h5> 
+<h5><a href='http://foghorntherapeutics.applytojob.com/apply/f8yWkDWk4s/Head-Of-Biostatistics'>Head of Biostatistics - Foghorn Therapeutics - Career Page</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -249,12 +249,12 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Springfield, Virginia</span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<h5><a href='https://nshe.wd1.myworkdayjobs.com/en-US/UNR-external/job/University-of-Nevada-Reno---Main-Campus/Assistant-Associate-Professor-Professor-Statistics_R0118623'>Assistant/Associate Professor Statistics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nshe.wd1.myworkdayjobs.com/en-US/UNR-external/job/University-of-Nevada-Reno---Main-Campus/Assistant-Associate-Professor-Professor-Statistics_R0118623'>Assistant/Associate Professor Statistics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 8, 2019 ... Applicants must have a PhD degree in mathematics, statistics, bio-statistics, data 
 science, or a related area by the time of appointment. Successful candidates?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.mathjobs.org/jobs/jobs/14907'>California State University, Chico, Department of Math and Statistics </a></h5> 
+<h5><a href='https://www.mathjobs.org/jobs/jobs/14907'>California State University, Chico, Department of Math and Statistics </a></h5> 
 <p><span class="badge badge-light">California California California United States</span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
@@ -319,7 +319,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">Chicago Rockford  Chicago</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.ap.uci.edu/JPF05335'>Tenure-Track/Tenured Faculty Position - Statistics (JPF05335) - UCI - Recruit</a></h5> 
+<h5><a href='https://recruit.ap.uci.edu/JPF05335'>Tenure-Track/Tenured Faculty Position - Statistics (JPF05335) - UCI - Recruit</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
@@ -335,7 +335,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='https://recruit.ap.ucsb.edu/JPF01589'>Tenure Track Teaching Faculty Position ? Statistics and Data Science ? Department of Statistics and Applied Probability (JPF01589) - Recruit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.ap.ucsb.edu/JPF01589'>Tenure Track Teaching Faculty Position ? Statistics and Data Science ? Department of Statistics and Applied Probability (JPF01589) - Recruit</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
@@ -347,7 +347,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/suffolkuniversity/job/ouhkbfw0'>Suffolk University Careers - Lecturers, Mathematics and Statistics</a></h5> 
+<h5><a href='https://jobs.jobvite.com/suffolkuniversity/job/ouhkbfw0'>Suffolk University Careers - Lecturers, Mathematics and Statistics</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -387,7 +387,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Mechelen, Belgium</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistician-4603'>Biostatistician - PPD Careers</a></h5> 
+<h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistician-4603'>Biostatistician - PPD Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -459,7 +459,7 @@ some instances. Statistical expertise in data management, analysis of panel data
 <p><span class="badge badge-light">Telangana, India</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/8E0BBDA5BE'>Statistics & Data Corporation (SDC) - Jobs: Senior Clinical Programmer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/8E0BBDA5BE'>Statistics & Data Corporation (SDC) - Jobs: Senior Clinical Programmer - Apply online</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -489,7 +489,7 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.amstat.org/jobs/12797743/two-tenure-track-positions-in-statistics-assistant-or-associate-level'>Two Tenure-track Positions in Statistics (Assistant or Associate level), Employment | AMSTAT</a></h5> 
+<h5><a href='https://jobs.amstat.org/jobs/12797743/two-tenure-track-positions-in-statistics-assistant-or-associate-level'>Two Tenure-track Positions in Statistics (Assistant or Associate level), Employment | AMSTAT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-04</p>
 <hr/>
